lcs-desktop (2.4.8~1) UNRELEASED; urgency=low

  [ Dominique Lepaisant ]
  * Fix bug with the width of windows when the iframe is loaded
  * Removing the import button in the user prefs if the user is in group "Student " 

  [ Jean-Luc Chrétien ]
  * Copy trunk version in 2.4.8 Tree
  * Modify inc-lcs-applis.php for new module name filexplorer

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 07 Jan 2011 17:06:19 +0100

lcs-desktop (0.2~18) Lcs; urgency=low

  * Fix bug on charset in notification of forum
  * Add wallpapers
  * Delete inc-form_user_prefs.php
  * rename delette_xml.php to delete_xml.php
  * Added the choice of the size of window opening them in the user prefs
  * Fix bug with js intrusions in Gepi
  * Correction of title tags and meta tags in index.php. Filled with the parameters of the establishment
  * Add new wallpaper and modify default wallpaper

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Mon, 20 Sep 2010 21:09:30 +0200

lcs-desktop (0.2~17) Lcs; urgency=low

  * Fixed bug on the registration of preferences 

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Thu, 23 Sep 2010 13:21:22 +0200

lcs-desktop (0.2~16) Lcs; urgency=low

  * Bug fix on retrieving preferences

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Sun, 26 Nov 2010 19:05:20 +0200

lcs-desktop (0.2~15) Lcs; urgency=low

  * Fix bug with the default display
  * Fix bug on inc-menus_admin.php links
  * Removing target _top in applications (force open a window in the desktop)
  * Fix bug IE8 (offline, unauthenticated)

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Wed, 22 Sep 2010 13:04:27 +0200

lcs-desktop (0.2~14) Lcs; urgency=low

  * Fix bug on the call of the finder (prefs)
  * Added forgotten files
  * Added save_prefs.php
  * Changing the display of the current date.
  * Amendment of window management. The windows are no longer assigned to an application. Each link opens a new window if not already open.