@@ -7,8 +7,10 @@ lcs-desktop (2.4.8~1) UNRELEASED; urgency=low
   [ Jean-Luc Chrétien ]
   * Copy trunk version in 2.4.8 Tree
   * Modify inc-lcs-applis.php for new module name filexplorer
+  * Modify index.php and inc-lcs-applis.php for roundcube and lcs-notify-desktop
+  	TODO : Modify  core/js/jquery.desktop.js, core/includes/inc-bars_topbottom.php, core/includes/inc-user_infos.php
 
- -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 07 Jan 2011 17:06:19 +0100
+ -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 13 Jan 2011 15:29:13 +0100
 
 lcs-desktop (0.2~18) Lcs; urgency=low
 
